--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <nav id="navbar" class="fixed w-full z-50 transition-all duration-300 bg-white/90 backdrop-blur-sm shadow-sm">
         <div class="max-w-1200 mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center space-x-2">
-                <i class="fas fa-crow text-primary text-2xl"></i>
+                <i class="fas fa-code text-primary text-2xl"></i>
                 <span class="text-xl font-bold text-dark">快捷宏</span>
             </div>
             <div class="hidden lg:flex items-center space-x-8">
